<resources>
    <string name="app_name">SocialMedia</string>
    <string name="splash">Social media network</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="autentificacion">Autentification</string>
    <string name="add">Add user</string>
    <string name="list">Users list</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date">BirthDate (dd/mm/yyyy)</string>
    <string name="studies">Studies</string>
    <string name="users">User</string>
    <string name="user_add">User Added</string>
    <string name="not_friend">Is not my friend</string>
    <string name="as_friend">+ Mark as a friend</string>
    <string name="add_friend">Is my friend</string>
    <string-array name="spinner">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
