<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.lasalle.ppro2.socialmedia.activities.LoginActivity"
    android:orientation="vertical">

<TextView
    android:id="@+id/autentificacion_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/autentificacion"
    android:textSize="30dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"/>
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/autentificacion_textview"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"/>
        <EditText
        android:id="@+id/LoginMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="122dp"
        android:hint="@string/email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />
    </LinearLayout>
    <Button
        android:layout_below="@id/layout_login"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

</RelativeLayout>
