<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.lasalle.ppro2.socialmedia.activities.AddUsuarioActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            android:onClick="back_toolBar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_friend"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="15dp" />
            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/scrollView2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:id="@+id/edit_name"/>
            <EditText
                android:layout_below="@id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:id="@+id/edit_surname"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_surname"
                android:id="@+id/spinner"
                android:entries="@array/spinner"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/spinner"
               android:id="@+id/edit_date"
               android:hint="@string/date"
               android:inputType="date"/>
            <EditText
                android:id="@+id/edit_studies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_date"
                android:hint="@string/studies"
                android:inputType="textMultiLine" />


        </RelativeLayout>

    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add"
        android:id="@+id/button2"
        android:onClick="AddUser"/>


</RelativeLayout>
