<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.lasalle.ppro2.socialmedia.activities.MenuActivity">
    <ImageView
        android:onClick="add_click"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image_add"
        android:src="@mipmap/ic_launcher"
        />
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_add"
        android:text="@string/add"
        android:textSize="20dp"/>
    <ImageView
        android:onClick="list_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentRight="true"
        android:id="@+id/image_list"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/list"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/image_list"
        android:layout_alignStart="@id/image_list"
        android:id="@+id/text_list"/>
    <ImageView
        android:onClick="exit_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="46dp"
        android:id="@+id/image_exit"
        android:layout_below="@+id/text_list"
        android:layout_alignStart="@+id/text_list" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/image_exit"
        android:layout_below="@id/image_exit"
        android:text="@string/exit"
        android:textSize="20dp"/>


</RelativeLayout>
